# 3D-Renderer-From-Scratch

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
3DRenderer/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
3DRenderer/Controller/: Controller.cpp  Controller.h  GEngineController.cpp  GEngineController.h
3DRenderer/Model/: AnyHolderPointer.h  AnyObject.cpp  AnyObject.h  Camera.cpp  Camera.h  GraphicEngine.cpp  GraphicEngine.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Objects.cpp  Objects.h  Primitives.cpp  Primitives.h  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  Utils.cpp  Utils.h  Vertex.h  World.cpp  World.h
3DRenderer/Model/Light/: AmbientLight.cpp  AmbientLight.h  PointLight.cpp  PointLight.h
3DRenderer/Model/ObjLoader/: ObjLoader.cpp  ObjLoader.h
3DRenderer/Observer/: Observer.h
3DRenderer/View/: MainScreen.cpp  MainScreen.h  View.cpp  View.h
Renderer/: CMakeLists.txt  Objects.cpp  Objects.h  main.cpp
Stock models/: Suzanne.mtl
